# portfolioWebsite

./: CMakeLists.txt  README.md  backend.cpp  backend.h  colorlist.cpp  colorlist.h  desktop.qml  emailsender.cpp  emailsender.h  fontloader.cpp  fontloader.h  main.cpp  main.qml  mobile.qml
components/: Contact.qml  Education.qml  Experience.qml  Mobile.qml  Projects.qml  SoftwareEng.qml  components.qrc  header.qml  main.qml  page.qrc  profileCard.qml
fonts/: fonts.qrc
icons/: icons.qrc
images/: images.qrc
